createproduct api implemented